configuracion de setup para correr en local

--- a/data_setup_notebooks/data_preprocessing.ipynb
+++ b/data_setup_notebooks/data_preprocessing.ipynb
@@ -2,19 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
+    "# IMPORTS\n",
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import json\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sarah\\Code\\ProyectoABD\\local_setup_config.json\n",
+      "Local configuration file loaded succesfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load parent directory config\n",
+    "config_path = Path.cwd().parent / \"local_setup_config.json\"\n",
+    "\n",
+    "# Load local config file\n",
+    "if config_path.exists():\n",
+    "    with open(config_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        local_config  = json.load(file)\n",
+    "    print('Local configuration file loaded succesfully')\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {config_path} not found\")\n",
+    "\n",
+    "# Set parent folder\n",
+    "project_folder = Path(local_config[\"parent_folder\"]).resolve()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the file paths\n",
+    "project_folder = Path.cwd().parent\n",
+    "output_path = project_folder / \"linkedindata\"\n",
+    "postings_file_path = output_path / \"postings.csv\"\n",
+    "combined_file_path = output_path / \"combined_postings.xlsx\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +150,8 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Read the CSV file\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings.csv\"\n",
-    "\n",
     "try:\n",
-    "    df = pd.read_csv(file_path)\n",
+    "    df = pd.read_csv(postings_file_path)\n",
     "\n",
     "    # Basic Information\n",
     "    print(\"1. Total Number of Rows:\", len(df))\n",
@@ -131,17 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 1 saved as C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata/postings_part_1.xlsx.\n",
-      "Part 2 saved as C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata/postings_part_2.xlsx.\n",
-      "Part 3 saved as C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata/postings_part_3.xlsx.\n",
-      "Part 4 saved as C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata/postings_part_4.xlsx.\n"
+      "Part 1 saved as c:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_1.xlsx.\n",
+      "Part 2 saved as c:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_2.xlsx.\n",
+      "Part 3 saved as c:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_3.xlsx.\n",
+      "Part 4 saved as c:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_4.xlsx.\n"
      ]
     }
    ],
@@ -154,12 +194,8 @@
     "        return re.sub(r\"[\\x00-\\x1F\\x7F]\", \"\", value)  # Remove ASCII control characters\n",
     "    return value\n",
     "\n",
-    "# Read the file\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings.csv\"\n",
-    "output_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\"\n",
-    "\n",
     "try:\n",
-    "    df = pd.read_csv(file_path)\n",
+    "    df = pd.read_csv(postings_file_path)\n",
     "\n",
     "    # Clean invalid characters in all data\n",
     "    df = df.map(remove_illegal_chars)\n",
@@ -174,10 +210,12 @@
     "        end_row = (i + 1) * chunk_size if i < 3 else num_rows  # Include all remaining rows in the last part\n",
     "\n",
     "        chunk = df.iloc[start_row:end_row]\n",
-    "        output_file = f\"{output_path}/postings_part_{i + 1}.xlsx\"\n",
+    "        part = f\"postings_part_{i + 1}.xlsx\"\n",
+    "        output_file = output_path / part\n",
+    "        output_file_str = str(output_file)\n",
     "        chunk.to_excel(output_file, index=False)\n",
     "\n",
-    "        print(f\"Part {i + 1} saved as {output_file}.\")\n",
+    "        print(f\"Part {i + 1} saved as {output_file_str}.\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(\"An error occurred. Error details are below:\")\n",
@@ -187,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,25 +239,31 @@
    "source": [
     "# File paths for the parts\n",
     "file_paths = [\n",
-    "    r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_1.xlsx\",\n",
-    "    r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_2.xlsx\",\n",
-    "    r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_3.xlsx\",\n",
-    "    r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\postings_part_4.xlsx\"\n",
+    "    output_path / \"postings_part_1.xlsx\",\n",
+    "    output_path / \"postings_part_2.xlsx\",\n",
+    "    output_path / \"postings_part_3.xlsx\",\n",
+    "    output_path / \"postings_part_4.xlsx\"\n",
     "]\n",
     "\n",
     "# Combine all parts into a single DataFrame\n",
     "combined_df = pd.concat([pd.read_excel(fp) for fp in file_paths], ignore_index=True)\n",
     "\n",
     "# Save the combined file as a new Excel file\n",
-    "output_file = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\combined_postings.xlsx\"\n",
-    "combined_df.to_excel(output_file, index=False)\n",
+    "combined_file_path = output_path / \"combined_postings.xlsx\"\n",
+    "combined_df.to_excel(combined_file_path, index=False)\n",
     "\n",
-    "print(f\"Combined file has been saved as {output_file}.\")"
+    "print(f\"Combined file has been saved as {output_file}.\")\n",
+    "\n",
+    "#Delete all parts\n",
+    "for fp in file_paths:\n",
+    "    if fp.exists():\n",
+    "        fp.unlink()\n",
+    "        print(\"deleted temporal 'postings' partitions\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,11 +439,8 @@
     }
    ],
    "source": [
-    "# Path of the combined file\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\combined_postings.xlsx\"\n",
-    "\n",
     "# Read the Excel file\n",
-    "df = pd.read_excel(file_path)\n",
+    "df = pd.read_excel(combined_file_path)\n",
     "\n",
     "# General information\n",
     "print(\"1. Total Number of Rows:\", len(df))\n",
@@ -418,83 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "job_id\n",
-      "company_name\n",
-      "title\n",
-      "description\n",
-      "max_salary\n",
-      "pay_period\n",
-      "location\n",
-      "company_id\n",
-      "views\n",
-      "med_salary\n",
-      "min_salary\n",
-      "formatted_work_type\n",
-      "applies\n",
-      "original_listed_time\n",
-      "remote_allowed\n",
-      "job_posting_url\n",
-      "application_url\n",
-      "application_type\n",
-      "expiry\n",
-      "closed_time\n",
-      "formatted_experience_level\n",
-      "skills_desc\n",
-      "listed_time\n",
-      "posting_domain\n",
-      "sponsored\n",
-      "work_type\n",
-      "currency\n",
-      "compensation_type\n",
-      "normalized_salary\n",
-      "zip_code\n",
-      "fips\n"
-     ]
-    }
-   ],
-   "source": [
-    "cols = df.columns\n",
-    "atr_list = cols.tolist()\n",
-    "\n",
-    "for atr in atr_list:\n",
-    "    print(atr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#optional: drop columns that won't be used\n",
     "irrelevant = ['job_posting_url',\n",
-    " 'application_url','posting_domain','fips']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['ComplexOnsiteApply', 'SimpleOnsiteApply', 'OffsiteApply',\n",
-       "       'UnknownApply'], dtype=object)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    " 'application_url','posting_domain']\n",
+    "\n",
     "df.drop(irrelevant, axis=1, inplace=True)"
    ]
   },
@@ -521,6 +493,7 @@
     }
    ],
    "source": [
+    "#check numeric columns\n",
     "\n",
     "num_cols = df.select_dtypes([np.number]).columns\n",
     "numeric_cols = num_cols.tolist()\n",
