--- a/data_setup_notebooks/numerical_data_cleanup.ipynb
+++ b/data_setup_notebooks/numerical_data_cleanup.ipynb
@@ -29,28 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#IMPORTS\n",
-    "\n",
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "#run this only after completing sqliteDBsetup.py execution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run this only after completing sqliteDBsetup.py execution\n",
+    "#IMPORTS\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET PROJECT FOLDER MAIN DIRECTORY\n",
+    "project_folder = Path.cwd().parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#DATABASE CONNECTION\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
-    "conn = sqlite3.connect(file_path)"
+    "linkedindatabase_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "if linkedindatabase_path.exists():\n",
+    "    conn = sqlite3.connect(linkedindatabase_path)\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {linkedindatabase_path} not found\")"
    ]
   },
   {
@@ -67,10 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create numerical_postings table in database\n",
     "query = \"SELECT job_id, max_salary, pay_period, views, med_salary, min_salary, applies, original_listed_time, expiry, closed_time, listed_time, currency, normalized_salary FROM postings\"\n",
     "df = pd.read_sql(query, conn)\n",
     "df.head()\n",
