--- a/data_setup_notebooks/sqliteDBsetup.ipynb
+++ b/data_setup_notebooks/sqliteDBsetup.ipynb
@@ -6,15 +6,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run this only after completing data_preprocessing.ipynb execution\n",
-    "# Imports\n",
+    "#IMPORTS\n",
     "import pandas as pd \n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FUNCTIONS\n",
+    "def load_to_db(file_path:Path, name:str, conn: sqlite3.Connection,excel:bool=False):\n",
+    "    if file_path.exists():\n",
+    "        if excel:\n",
+    "            df = pd.read_excel(file_path)\n",
+    "        else:\n",
+    "            df = pd.read_csv(file_path)\n",
+    "        df.to_sql(name, conn, if_exists='replace', index = False)\n",
+    "        print(f\"loaded {name} into database\")\n",
+    "    else:\n",
+    "        raise FileNotFoundError(f\"Error: {file_path} not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the file paths\n",
+    "project_folder = Path.cwd().parent\n",
+    "linkedindata_path = project_folder / \"linkedindata\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -27,37 +57,40 @@
    ],
    "source": [
     "#creates or opens linkedindatabase.db, connects to it and creates a cursor object\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
-    "conn = sqlite3.connect(file_path)\n",
+    "database_file_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "conn = sqlite3.connect(database_file_path)\n",
     "cur = conn.cursor()\n",
     "print(\"Opened database successfully\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loaded postings into database\n",
       "Data inserted successfully\n"
      ]
     }
    ],
    "source": [
     "#loads combined_postings into the database\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\combined_postings.xlsx\"\n",
-    "df = pd.read_excel(file_path)\n",
-    "df.to_sql('postings', conn, if_exists='replace', index = False)\n",
+    "combined_postings_path = linkedindata_path / \"combined_postings.xlsx\"\n",
+    "if combined_postings_path.exists():\n",
+    "    load_to_db(combined_postings_path, 'postings',conn,excel=True)\n",
+    "else:\n",
+    "    load_to_db(linkedindata_path / \"postings.csv\", 'postings',conn)\n",
     "conn.commit()\n",
     "print(\"Data inserted successfully\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,22 +102,13 @@
     }
    ],
    "source": [
-    "#loads tables from folder 'companies' into the database\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\companies\\companies.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('companies', conn, if_exists='replace', index = False)\n",
+    "#load tables from folder 'companies' into the database\n",
+    "companies_path = linkedindata_path / \"companies\"\n",
     "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\companies\\company_industries.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('company_industries', conn, if_exists='replace', index = False)\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\companies\\company_specialities.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('company_specialities', conn, if_exists='replace', index = False)\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\companies\\employee_counts.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('employee_counts', conn, if_exists='replace', index = False)\n",
+    "load_to_db(companies_path / \"companies.csv\", 'companies',conn)\n",
+    "load_to_db(companies_path / \"company_industries.csv\", 'company_industries',conn)\n",
+    "load_to_db(companies_path / \"company_specialities.csv\", 'company_specialities',conn)\n",
+    "load_to_db(companies_path / \"employee_counts.csv\", 'employee_counts',conn)\n",
     "\n",
     "conn.commit()\n",
     "print(\"Data inserted successfully\")"
@@ -92,34 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data inserted successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#loads tables from folder 'jobs' into the database\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\jobs\\benefits.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('benefits', conn, if_exists='replace', index = False)\n",
+    "jobs_path = linkedindata_path / \"jobs\"\n",
     "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\jobs\\job_industries.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('job_industries', conn, if_exists='replace', index = False)\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\jobs\\job_skills.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('job_skills', conn, if_exists='replace', index = False)\n",
-    "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\jobs\\salaries.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('salaries', conn, if_exists='replace', index = False)\n",
+    "load_to_db(jobs_path / \"benefits.csv\", 'benefits',conn)\n",
+    "load_to_db(jobs_path / \"job_industries.csv\", 'job_industries',conn)\n",
+    "load_to_db(jobs_path / \"job_skills.csv\", 'job_skills',conn)\n",
+    "load_to_db(jobs_path / \"salaries.csv\", 'salaries',conn)\n",
     "\n",
     "conn.commit()\n",
     "print(\"Data inserted successfully\")"
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +147,10 @@
    ],
    "source": [
     "#loads tables from folder 'mappings' into the database\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\mappings\\industries.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('industries', conn, if_exists='replace', index = False)\n",
+    "mappings_path = linkedindata_path / \"mappings\"\n",
     "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\linkedindata\\mappings\\skills.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
-    "df.to_sql('skills', conn, if_exists='replace', index = False)\n",
+    "load_to_db(mappings_path / \"industries.csv\", 'industries',conn)\n",
+    "load_to_db(mappings_path / \"skills.csv\", 'skills',conn)\n",
     "\n",
     "conn.commit()\n",
     "print(\"Data inserted successfully\")"
