--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORTS\n",
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from IPython.display import Markdown\n",
+    "from pathlib import Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET PROJECT FOLDER MAIN DIRECTORY\n",
+    "project_folder = Path.cwd().parent\n",
+    "\n",
+    "#LOAD LOCAL_SETUP_CONFIG FILE\n",
+    "config_path = project_folder / \"local_setup_config.json\"\n",
+    "if config_path.exists():\n",
+    "    with open(config_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        local_config  = json.load(file)\n",
+    "    print('Local configuration file loaded succesfully')\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {config_path} not found\")\n",
+    "\n",
+    "# set run_local\n",
+    "run_local = local_config[\"run_local\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,22 +53,6 @@
    "metadata": {},
    "source": [
     "A continuación se presenta una descripción y visualización de los datos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#IMPORTS\n",
-    "\n",
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from IPython.display import Markdown\n"
    ]
   },
   {
@@ -68,15 +91,21 @@
    "outputs": [],
    "source": [
     "#DATABASE CONNECTION\n",
+    "if run_local:\n",
+    "    linkedindatabase_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "else:\n",
+    "    linkedindatabase_path = project_folder / \"linkedindatabase.db\"\n",
     "\n",
-    "file_path = r\"linkedindatabase.db\"\n",
-    "#file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
-    "conn = sqlite3.connect(file_path)"
+    "if linkedindatabase_path.exists():\n",
+    "    conn = sqlite3.connect(linkedindatabase_path)\n",
+    "    print(\"Opened database successfully\")\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {linkedindatabase_path} not found\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,9 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nor_salary_insights' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#varianza\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m var_salary \u001b[38;5;241m=\u001b[39m \u001b[43mnor_salary_insights\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvar()\n\u001b[0;32m      3\u001b[0m var_salary_max \u001b[38;5;241m=\u001b[39m max_salary_insights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvar()\n\u001b[0;32m      4\u001b[0m var_salary_min \u001b[38;5;241m=\u001b[39m min_salary_insights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvar()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nor_salary_insights' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#varianza\n",
     "var_salary = nor_salary_insights['salary'].var()\n",
@@ -298,13 +339,29 @@
     "range_salary_min = max_salary_min - min_salary_min\n",
     "\n",
     "#coef asimetria\n",
-    "\n",
+    "asim_salary = asim(nor_salary_insights['salary'])\n",
+    "asim_salary_max = asim(max_salary_insights['salary'])\n",
+    "asim_salary_min = asim(min_salary_insights['salary'])\n",
     "\n",
     "#curtosis\n",
+    "kurt_salary = nor_salary_insights['salary'].kurt()\n",
+    "kurt_salary_max = max_salary_insights['salary'].kurt()\n",
+    "kurt_salary_min = min_salary_insights['salary'].kurt()\n",
+    "\n",
+    "disp_data = {\n",
+    "    'Medida': ['Varianza', 'Desviación Estándar', 'Rango', 'Coeficiente de Asimetría', 'Curtosis'],\n",
+    "    'Salario medio': [var_salary, std_salary, (min_salary,max_salary), asim_salary, kurt_salary],\n",
+    "    'Salario máximo': [var_salary_max, std_salary_max, (min_salary_max,max_salary_max), asim_salary_max, kurt_salary_max],\n",
+    "    'Salario mínimo': [var_salary_min, std_salary_min, (min_salary_min,max_salary_min), asim_salary_min, kurt_salary_min]\n",
+    "}\n",
+    "\n",
+    "markdown_table = dict_to_markdown(disp_data)\n",
     "\n",
     "\n",
     "\n",
-    "\n"
+    "# Display Markdown table\n",
+    "\n",
+    "display(Markdown(markdown_table))"
    ]
   },
   {
@@ -502,7 +559,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#varianza\n",
+    "var_salary = nor_salary_insights['salary'].var()\n",
+    "var_salary_max = max_salary_insights['salary'].var()\n",
+    "var_salary_min = min_salary_insights['salary'].var()\n",
+    "\n",
+    "#desviacion estandar\n",
+    "std_salary = nor_salary_insights['salary'].std()\n",
+    "std_salary_max = max_salary_insights['salary'].std()\n",
+    "std_salary_min = min_salary_insights['salary'].std()\n",
+    "\n",
+    "#max\n",
+    "max_salary = nor_salary_insights['salary'].max()\n",
+    "max_salary_max = max_salary_insights['salary'].max()\n",
+    "max_salary_min = min_salary_insights['salary'].max()\n",
+    "#min\n",
+    "min_salary = nor_salary_insights['salary'].min()\n",
+    "min_salary_max = max_salary_insights['salary'].min()\n",
+    "min_salary_min = min_salary_insights['salary'].min()\n",
+    "#rango\n",
+    "range_salary = max_salary - min_salary\n",
+    "range_salary_max = max_salary_max - min_salary_max\n",
+    "range_salary_min = max_salary_min - min_salary_min\n",
+    "\n",
+    "#coef asimetria\n",
+    "asim_salary = asim(nor_salary_insights['salary'])\n",
+    "asim_salary_max = asim(max_salary_insights['salary'])\n",
+    "asim_salary_min = asim(min_salary_insights['salary'])\n",
+    "\n",
+    "#curtosis\n",
+    "kurt_salary = nor_salary_insights['salary'].kurt()\n",
+    "kurt_salary_max = max_salary_insights['salary'].kurt()\n",
+    "kurt_salary_min = min_salary_insights['salary'].kurt()\n",
+    "\n",
+    "disp_data = {\n",
+    "    'Medida': ['Varianza', 'Desviación Estándar', 'Rango', 'Coeficiente de Asimetría', 'Curtosis'],\n",
+    "    'Salario medio': [var_salary, std_salary, (min_salary,max_salary), asim_salary, kurt_salary],\n",
+    "    'Salario máximo': [var_salary_max, std_salary_max, (min_salary_max,max_salary_max), asim_salary_max, kurt_salary_max],\n",
+    "    'Salario mínimo': [var_salary_min, std_salary_min, (min_salary_min,max_salary_min), asim_salary_min, kurt_salary_min]\n",
+    "}\n",
+    "\n",
+    "markdown_table = dict_to_markdown(disp_data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Display Markdown table\n",
+    "\n",
+    "display(Markdown(markdown_table))"
+   ]
   },
   {
    "cell_type": "markdown",
