--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,31 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from pathlib import Path\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET PROJECT FOLDER MAIN DIRECTORY\n",
+    "project_folder = Path.cwd().parent\n",
+    "\n",
+    "#LOAD LOCAL_SETUP_CONFIG FILE\n",
+    "config_path = project_folder / \"local_setup_config.json\"\n",
+    "if config_path.exists():\n",
+    "    with open(config_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        local_config  = json.load(file)\n",
+    "    print('Local configuration file loaded succesfully')\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {config_path} not found\")\n",
+    "\n",
+    "# set run_local\n",
+    "run_local = local_config[\"run_local\"]"
    ]
   },
   {
@@ -77,12 +101,16 @@
    ],
    "source": [
     "#DATABASE CONNECTION\n",
+    "if run_local:\n",
+    "    linkedindatabase_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "else:\n",
+    "    linkedindatabase_path = project_folder / \"linkedindatabase.db\"\n",
     "\n",
-    "file_path = r\"linkedindatabase.db\"\n",
-    "#file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
-    "conn = sqlite3.connect(file_path)\n",
-    "\n",
-    "print(\"Opened database successfully\")"
+    "if linkedindatabase_path.exists():\n",
+    "    conn = sqlite3.connect(linkedindatabase_path)\n",
+    "    print(\"Opened database successfully\")\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {linkedindatabase_path} not found\")"
    ]
   },
   {
