--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div align=\"center\">\n",
-    "   <h1>ANÁLISIS PREDICTIVO</h1>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A continuación se presenta el análisis predictivo. Realizamos una regresión lineal sobre los salarios en el tiempo, y obtuvimos predicciones salariales para 2025"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,6 +16,44 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET PROJECT FOLDER MAIN DIRECTORY\n",
+    "project_folder = Path.cwd().parent\n",
+    "\n",
+    "#LOAD LOCAL_SETUP_CONFIG FILE\n",
+    "config_path = project_folder / \"local_setup_config.json\"\n",
+    "if config_path.exists():\n",
+    "    with open(config_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        local_config  = json.load(file)\n",
+    "    print('Local configuration file loaded succesfully')\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {config_path} not found\")\n",
+    "\n",
+    "# set run_local\n",
+    "run_local = local_config[\"run_local\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "   <h1>ANÁLISIS PREDICTIVO</h1>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se presenta el análisis predictivo. Realizamos una regresión lineal sobre los salarios en el tiempo, y obtuvimos predicciones salariales para 2025"
    ]
   },
   {
@@ -80,10 +102,16 @@
    "outputs": [],
    "source": [
     "#DATABASE CONNECTION\n",
+    "if run_local:\n",
+    "    linkedindatabase_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "else:\n",
+    "    linkedindatabase_path = project_folder / \"linkedindatabase.db\"\n",
     "\n",
-    "#file_path = r\"linkedindatabase.db\"\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
-    "conn = sqlite3.connect(file_path)"
+    "if linkedindatabase_path.exists():\n",
+    "    conn = sqlite3.connect(linkedindatabase_path)\n",
+    "    print(\"Opened database successfully\")\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Error: {linkedindatabase_path} not found\")"
    ]
   },
   {
