--- a/load_database.ipynb
+++ b/load_database.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "def load_db():\n",
-    "    import os\n",
-    "    import requests\n",
+    "    from pathlib import Path\n",
     "    \n",
     "    #file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
     "    file_path = r\"linkedindatabase.db\"\n",
