--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from IPython.display import Markdown\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import json\n"
    ]
   },
   {
