conexión remota a la base de datos

--- a/load_database.ipynb
+++ b/load_database.ipynb
@@ -6,17 +6,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_db():\n",
+    "def load_db(given_project_folder=None):\n",
     "    from pathlib import Path\n",
+    "    import requests\n",
+    "    import json\n",
     "    \n",
-    "    #file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
-    "    file_path = r\"linkedindatabase.db\"\n",
+    "    #SET PROJECT FOLDER MAIN DIRECTORY\n",
+    "    if given_project_folder == None:\n",
+    "        project_folder = Path.cwd()\n",
+    "    else:\n",
+    "        project_folder = given_project_folder\n",
+    "    print(f\"Project folder set to {project_folder} for load_database.py\")\n",
     "    \n",
-    "    if not os.path.exists(file_path):\n",
+    "    #LOAD LOCAL_SETUP_CONFIG FILE\n",
+    "    config_path = project_folder / \"local_setup_config.json\"\n",
+    "    if config_path.exists():\n",
+    "        with open(config_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "            local_config  = json.load(file)\n",
+    "            print('Local configuration file loaded succesfully')\n",
+    "    else:\n",
+    "        raise FileNotFoundError(f\"Error: {config_path} not found\")\n",
+    "    \n",
+    "    # set run_local\n",
+    "    run_local = local_config[\"run_local\"]\n",
+    "\n",
+    "    #set path for database file\n",
+    "    if not run_local:\n",
+    "        database_file_path = project_folder / \"linkedindatabase.db\"\n",
+    "    else:\n",
+    "        print(\"You're running on local\")\n",
+    "        database_file_path = project_folder / \"database\" / \"linkedindatabase.db\"\n",
+    "\n",
+    "    \n",
+    "    #create or open linkedindatabase.db, connect to it and create a cursor object\n",
+    "    if not database_file_path.exists():\n",
     "        print('Database not ready. Loading...')\n",
     "        try:\n",
     "            # URL of your Google Drive database file (direct download link)\n",
-    "            url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
+    "            url = \"https://www.googleapis.com/drive/v3/files/1e_PSowuukgifVA7rzqkvhDuCud-YDxtN?alt=media&key=AIzaSyDgoIBvsODQNReD8hl8DiACY2ntGbc5wYc\"\n",
     "            # Send a GET request to download the file\n",
     "            response = requests.get(url)\n",
     "            # Save the content to a local file (in the Binder container or local disk)\n",
