--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -1,37 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div align=\"center\">\n",
-    "   <h1>ANÁLISIS EXPLORATORIO</h1>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A continuación se presentan algunos resultados del análisis exploratorio de la base de datos\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTS\n",
-    "\n",
+    "import sys\n",
+    "import json\n",
+    "from pathlib import Path\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from pathlib import Path\n",
-    "import json"
+    "import seaborn as sns"
    ]
   },
   {
@@ -62,28 +45,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DATABASE LOADING\n",
-    "\n",
-    "import os\n",
-    "import requests\n",
-    "\n",
-    "file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
-    "\n",
-    "if not os.path.exists(file_path):\n",
-    "    print('Database not ready. Loading...')\n",
-    "    try:\n",
-    "        # URL of your Google Drive database file (direct download link)\n",
-    "        url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
-    "        # Send a GET request to download the file\n",
-    "        response = requests.get(url)\n",
-    "        # Save the content to a local file (in the Binder container or local disk)\n",
-    "        with open('linkedindatabase.db', 'wb') as f:\n",
-    "            f.write(response.content)\n",
-    "        print(\"Database available!\")\n",
-    "    except Exception as e:\n",
-    "        print(\"Failed to fetch database: {e}\")\n",
-    "else:\n",
-    "    print('Database already loaded!')"
+    "#MODULE PATHS\n",
+    "sys.path.append(str(project_folder))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MODULE IMPORTS\n",
+    "import load_database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LOAD DATABASE\n",
+    "load_database.load_db(project_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "   <h1>ANÁLISIS EXPLORATORIO</h1>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se presentan algunos resultados del análisis exploratorio de la base de datos\n",
+    "\n"
    ]
   },
   {
