--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTS\n",
     "\n",
+    "import sys\n",
+    "import json\n",
+    "from pathlib import Path\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,6 +41,36 @@
     "\n",
     "# set run_local\n",
     "run_local = local_config[\"run_local\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MODULE PATHS\n",
+    "sys.path.append(str(project_folder))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MODULE IMPORTS\n",
+    "import load_database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LOAD DATABASE\n",
+    "load_database.load_db(project_folder)"
    ]
   },
   {
