descriptive_analysis corriendo en voila local

--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,22 +90,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div align=\"center\">\n",
-    "   <h1>ANÁLISIS DESCRIPTIVO</h1>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A continuación se presenta una descripción y visualización de los datos"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -122,6 +106,17 @@
     "    print(\"Opened database successfully\")\n",
     "else:\n",
     "    raise FileNotFoundError(f\"Error: {linkedindatabase_path} not found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "   <h1>ANÁLISIS DESCRIPTIVO</h1>\n",
+    "</div>\n",
+    "\n",
+    "A continuación se presenta una descripción y visualización de los datos"
    ]
   },
   {
@@ -581,15 +576,6 @@
    "metadata": {},
    "source": [
     "#### Visualización"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "views.get_c"
    ]
   },
   {
