--- a/visualization_notebooks/conclusions.ipynb
+++ b/visualization_notebooks/conclusions.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d6ff535c",
+   "metadata": {},
+   "source": [
+    "# CONCLUSIONES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c14681f9-14c1-442f-a3c4-a9f634d9c147",
    "metadata": {},
    "source": [
@@ -169,7 +177,7 @@
    "id": "f88913d8-7676-49cc-ad0d-812157c6dc61",
    "metadata": {},
    "source": [
-    "# Análisis Descriptivo:"
+    "# Análisis Descriptivo"
    ]
   },
   {
@@ -308,7 +316,7 @@
    "id": "6493eeec-07cf-4a18-874c-ff8fc717c9b8",
    "metadata": {},
    "source": [
-    "# Análisis predictivo"
+    "# Análisis Predictivo"
    ]
   },
   {
@@ -370,12 +378,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "#### **3. Predicción del salario promedio para Mayo 2024**  \n",
-    "\n",
-    "\n",
-    "💡 **Conclusión clave**:, al menos en el período analizado.  \n",
-    "\n",
     "---\n",
     "\n",
     "### **Conclusión general**  \n",
@@ -389,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
